VTK-3454 - fix a gfx overflow

--- a/src/main/resources/web/themes/default/default.css
+++ b/src/main/resources/web/themes/default/default.css
@@ -971,7 +971,7 @@ ul.dropdown-shortcut-menu li.dropdown-init .dropdown-shortcut-menu-click-area {
   position: absolute;
   top: 0px;
   right: 0px;
-  height: 29px;
+  height: 28px;
   width: 26px;
   padding: 0;
   margin: 0;
